hydran-67: Introduce method specific request objects.
